# a-MAZE-ing

./: .gitignore  Makefile  READ.ME  README.md  README_MAZEGEN.md  a_maze_ing.py  config.txt  maze_generator.py  mazegen.py  output_maze.txt  pyproject.toml  render_ascii.py  render_test.py
algo_tests/: bfs.py  maze_generator.py  test.py
