[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.1"
description = "Reusable maze generator module"
readme = "README_MAZEGEN.md"
requires-python = ">=3.10"
authors = [
    { name = "lyokoiga" },
    { name = "msobral-" }
]
license = {text = "MIT"}

[tool.setuptools]
py-modules = ["mazegen"]